--- a/src/main/resources/templates/database.html
+++ b/src/main/resources/templates/database.html
@@ -31,7 +31,7 @@ and open the template in the editor.
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+<!--                        <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -52,10 +52,39 @@ and open the template in the editor.
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </nav>
-        <div>Database KTP Indonesia</div>
+        <div align="center">Database KTP Indonesia</div>
+        <a href="/create">Data baru</a>
+        <a href="/search">Cari data</a>
+        <div class="table-responsive">
+<!--                <table id="tabelKTP" class="table table-primary table-striped align-middle">-->
+                <table class="table align-middle">
+                    <thead>
+                        <tr>
+                            <th scope="col">NIK</th>
+                            <th scope="col">Nama</th>
+                            <th scope="col">Tanggal Lahir</th>
+                            <th scope="col">Alamat</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="godata:${goData}">
+                            <td th:text="${godata.noktp}"></td>
+                            <td th:text="${godata.nama}"></td>
+                            <td th:text="${#calendars.format(godata.tgllahir, 'dd-MMM-yyyy')}"></td>
+                            <td th:text="${godata.alamat}"></td>
+                            <td>
+                                <a href="/detail">Detail</a>
+                                <a href="/editktp">Edit</a>
+                                <a href="/delete">Delete</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
     </body>
 </html>
