--- a/src/main/resources/templates/dummy.html
+++ b/src/main/resources/templates/dummy.html
@@ -92,9 +92,9 @@ and open the template in the editor.
                         <td><a href="/">Detail</a>
                             <a href="/">Edit</a>
                             <a href="/">Delete</a>
-                        </td>
+                        </td>-->
                     </tr>
-                </tbody>-->
+                </tbody>
             </table>
         </div>
     </body>
