--- a/src/main/resources/templates/dummy/create.html
+++ b/src/main/resources/templates/dummy/create.html
@@ -38,9 +38,8 @@ and open the template in the editor.
                 <td><button type="submit">Submit</button></td>
             </tr>
             </table> 
-<!--            <button type="submit">Submit</button>-->
             <br>
-            <button type="button" onclick="window.location.href='/dummy'">Back</button>
+            <button type="button" onclick="window.location.href='/dummy'">Dummy</button>
         </form>
     </body>
 </html>
