--- a/src/main/resources/templates/dummy.html
+++ b/src/main/resources/templates/dummy.html
@@ -34,28 +34,6 @@ and open the template in the editor.
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href='/dummy'>Dummy</a>
                         </li>
-<!--                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>-->
                 </div>
             </div>
         </nav>
@@ -79,9 +57,10 @@ and open the template in the editor.
                     <tr th:each="goDummy:${goDummy}">
                         <td th:text="${goDummy.id}"></td>
                         <td th:text="${#calendars.format(goDummy.tanggal, 'dd-MM-yyyy')}"></td>
-                        <td><img src="data:image/jpeg;base64,( ${goDummy.gambar} )"/></td>
-                        <td><a href="/">Detail</a>
-                            <a href="/">Edit</a>
+                        <td><img th:src="@{${'/image?id='+ goDummy.id}}" alt="poto" width="100"></td>
+                        <td>
+                            <a href="/">Detail</a>
+                            <a href="/edit">Edit</a>
                             <a href="/">Delete</a>
                         </td>
                     </tr>
