--- a/src/main/resources/templates/dummy/create.html
+++ b/src/main/resources/templates/dummy/create.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             <tr>
                 <td>Tanggal Lahir</td>
                 <td>
-                    <input type="date" name="date">
+                    <input type="date" name="tanggal">
                 </td>
             </tr>
             <tr>
