--- a/src/main/resources/templates/editktp.html
+++ b/src/main/resources/templates/editktp.html
@@ -9,8 +9,55 @@ and open the template in the editor.
         <title>Edit KTP</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">        
+        </script>
     </head>
     <body>
-        <div>TODO write content</div>
-    </body>
+        <div class="container">
+      <div class="row">
+        <form
+          action="/updatedata"
+          th:object="${goDummy}"
+          method="post"
+          class="mt-3"
+          enctype="multipart/form-data">
+  
+          <div class="form-group">
+            <label for="id">ID</label>
+            <input
+              type="hidden"
+              class="form-control"
+              id="id"
+              name="id"
+              th:value="${id}"
+              readonly />
+          </div>
+            
+          <div class="form-group">
+              <input type="date" name="tanggal">
+          </div>
+
+          <div class="form-group">
+            <label for="foto"></label>
+            <input
+              type="file"
+              class="form-control"
+              
+              id="gambar"
+              name="gambar"
+              placeholder="gambar" />
+            <div class="d-flex mt-2">
+              <img th:src="@{${'/image?id='+ id}}" alt="poto" width="100" />
+            </div>
+          </div>
+
+          <button type="submit" class="btn btn-primary mt-5">Submit</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
