--- a/src/main/resources/templates/editktp.html
+++ b/src/main/resources/templates/editktp.html
@@ -19,37 +19,20 @@ and open the template in the editor.
     <body>
         <div class="container">
       <div class="row">
-        <form
-          action="/updatedata"
-          th:object="${goDummy}"
-          method="post"
-          class="mt-3"
-          enctype="multipart/form-data">
+        <form action="/updatedata"
+          th:object="${goDummy}" method="post" class="mt-3" enctype="multipart/form-data">
   
           <div class="form-group">
             <label for="id">ID</label>
-            <input
-              type="hidden"
-              class="form-control"
-              id="id"
-              name="id"
-              th:value="${id}"
-              readonly />
+            <input type="hidden" class="form-control" id="id" name="id" th:value="${id}" readonly />
           </div>
-            
+            <br>
           <div class="form-group">
               <input type="date" name="tanggal">
           </div>
-
+            <br>
           <div class="form-group">
-            <label for="foto"></label>
-            <input
-              type="file"
-              class="form-control"
-              
-              id="gambar"
-              name="gambar"
-              placeholder="gambar" />
+            <input type="file" class="form-control" id="gambar" name="gambar" placeholder="gambar" />
             <div class="d-flex mt-2">
               <img th:src="@{${'/image?id='+ id}}" alt="poto" width="100" />
             </div>
