--- a/src/main/resources/templates/editktp.html
+++ b/src/main/resources/templates/editktp.html
@@ -23,15 +23,18 @@ and open the template in the editor.
           th:object="${goDummy}" method="post" class="mt-3" enctype="multipart/form-data">
   
           <div class="form-group">
-            <label for="id">ID</label>
-            <input type="hidden" class="form-control" id="id" name="id" th:value="${id}" readonly />
+            <label>ID</label>
+            <input type="hidden" class="form-control" name="id" th:value="${id}" />
           </div>
             <br>
           <div class="form-group">
-              <input type="date" name="tanggal">
+              <label>Tanggal Lahir</label>
+              <input type="date" class="form-control" name="tanggal"/>
+                                        
           </div>
             <br>
           <div class="form-group">
+              <label>Gambar</label>
             <input type="file" class="form-control" id="gambar" name="gambar" placeholder="gambar" />
             <div class="d-flex mt-2">
               <img th:src="@{${'/image?id='+ id}}" alt="poto" width="100" />
